<resources>
    <string name="app_name">ShoppingEZ</string>
    <string name="total">Total</string>
    <string name="discount">Discount</string>
    <string name="deliveryChrg">Delivery Charge</string>
    <string name="netTot">NET TOTAL</string>
    <string name="deliveryAddress">Delivery Address</string>
    <string name="addaddress">Please add your Address here..</string>
    <string name="payment">Payment</string>
    <string name="cashonDelivery">  Cash on Delivery   </string>
    <string name="proceed">PROCEED</string>
    <string name="add">ADD</string>
    <string name="thankyou">Thank You</string>
    <string name="forYourOrder">For your Order</string>
    <string name="yourAddress">Your Address</string>
    <string name="address">12/5 , Homagama , Piliyandala</string>
    <string name="change">Change</string>
    <string name="complete">  COMPLETE  </string>
    <string name="cancelOrder">Cancel Order</string>
    <string name="email">Email</string>
    <string name="message">Message</string>
    <string name="enquiry">Enquiry</string>
    <string name="send">Send</string>
    <string name="enquirymanagement">Enquiry Management</string>
    <string name="xxxxx">XXXXX.XX</string>
    <string name="checkout"> Checkout </string>
    <string name="details">Your order will be delivered to your doostep as soon as possible</string>
    <string name="orderSuccess">Order Sccess</string>
    <string name="samplemail">Sample Email  </string>
    <string name="samplemsg">Sample Message</string>
    <string name="reply">Reply</string>
    <string name="delete">Delete</string>
    <string name="SignIn">Sign In Here</string>
    <string name="SignUp">Dont Have a Account? Sign Up Here</string>
    <string name="empty">.</string>
    <string name="AdminAllItems">All Items</string>
    <string name="AdminDashboard">Admin \nDashBoard</string>
    <string name="AdminViewItem">View Items</string>
    <string name="AdminViewCat">View Categories</string>
    <string name="AdminAddItem">Add Item</string>
    <string name="AdminAddCat">Add Category</string>
    <string name="AdminEditItem">Edit Items</string>
    <string name="AdminEditCat">Edit Category</string>
    <string name="AdminEditItemHeader">Edit Selected Item</string>
    <string name="ListFruitsHeader">Fruits</string>
    <string name="ListVegetableHeader">Vegetable</string>
    <string name="enterYourAddress">Enter Your Address</string>
    <string name="changeAddress">Change</string>
    <string name="txtProfile">USER PROFILE</string>
    <string name="btnEdit">Edit profile</string>
    <string name="btnOrders">my orders</string>
    <string name="btnContact">contact us</string>
    <string name="btnLogout">logout</string>
    <string name="Fname">FIRST NAME</string>
    <string name="editFname" />
    <string name="editLname" />
    <string name="enquiries">Enquiries</string>
    <string name="Login">Login</string>
    <string name="ListBevaragesHeader">Bevarages</string>
    <string name="ListMeatHeader">Meats</string>
    <string name="ListRiceHeader">Rice</string>
    <string name="ListSnacksHeader">Snacks</string>
    <string name="btnUpdate">Update</string>


</resources>